<resources>
    <string name="app_name">Crazy Blocks</string>
    <string name="save_file">saved_state.bin</string>
    <string name="banner_ad_unit_id">ca-app-pub-9912906347455873/6164281748</string>
    <string name="interstitial_ad_unit_id">"ca-app-pub-9912906347455873/7641014949"</string>
    <string name="movesLabel">Moves:</string>
    <string name="levelLabel">Level:</string>
    <string name="livesLabel">Lives:</string>
    <string name="continueLabel">Continue</string>
    <string name="newGameLabel">New Game</string>
    <string name="newUnlimitedGameLabel">New Unlimited Game</string>
    <string name="scoreLabel">Score: </string>
    <string name="zero">0</string>
    <string name="logoDescription">Crazy Blocks Logo</string>
    <string name="failMatch">You have failed to match the pattern</string>
    <string name="successMatch">You have successfully matched the pattern</string>
    <string name="levelUp">You have leveled up</string>
    <string name="tutorialLabel">Tutorial</string>
    <string name="tutorialText">At the top of the\n
                                screen you’ll see a\n
                                pattern that you must\n
                                match to the lower\n
                                part of your screen.\n
                                \n
                                You can match the pattern\n
                                by touching one or more\n
                                of the blue squares on the\n
                                lower half.\n
                                \n
                                Each square you\n
                                touch will make a\n
                                plus (+) pattern using\n
                                the opposite color\n
                                (blue turns into green,\n
                                and green turns into\n
                                blue).\n
                                \n
                                Good luck!</string>
</resources>
