<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_start_top_padding"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/logoDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_logo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_start_left_padding"
        android:paddingStart="@dimen/activity_start_left_padding"
        android:paddingRight="@dimen/activity_start_right_padding"
        android:paddingEnd="@dimen/activity_start_right_padding"
        android:layout_weight="3"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <Button
            android:id="@+id/new_game"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/landing_page_button_selector"
            android:textSize="@dimen/activity_text_size"
            android:textColor="@color/start_page_text_color"
            android:textStyle="bold"
            android:text="@string/newGameLabel"
            android:onClick="newGame"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_start_button_top_margin"
            android:layout_marginBottom="@dimen/activity_start_button_bottom_margin" />

        <Button
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/landing_page_button_selector"
            android:textSize="@dimen/activity_text_size"
            android:textColor="@color/start_page_text_color"
            android:textStyle="bold"
            android:text="@string/newUnlimitedGameLabel"
            android:onClick="newUnlimitedGame"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_start_button_top_margin"
            android:layout_marginBottom="@dimen/activity_start_button_bottom_margin" />

        <Button
            android:id="@+id/continueButton"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/landing_page_button_selector"
            android:textSize="@dimen/activity_text_size"
            android:textColor="@color/start_page_text_color"
            android:textStyle="bold"
            android:text="@string/continueLabel"
            android:onClick="continueGame"
            android:layout_marginTop="@dimen/activity_start_button_top_margin"
            android:layout_marginBottom="@dimen/activity_start_button_bottom_margin" />

        <Button
            android:id="@+id/tutorialButton"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/landing_page_button_selector"
            android:textSize="@dimen/activity_text_size"
            android:textColor="@color/start_page_text_color"
            android:textStyle="bold"
            android:text="@string/tutorialLabel"
            android:onClick="tutorial"
            android:layout_marginTop="@dimen/activity_start_button_top_margin"
            android:layout_marginBottom="@dimen/activity_start_button_bottom_margin" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</LinearLayout>